--- a/Style.css
+++ b/Style.css
@@ -1,12 +1,14 @@
-body {
-  color: red;
-}
-h1 {
-  color: blue;
-}
-h2 {
-  color: green;
-}
-#lib-header {
-  color: grey;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap
+  body {
+    font-family: 'Montserrat',sans-serif; 
+    }
+  
+
+
+  
+
+
+  
+
+
+  
