--- a/Styles.css
+++ b/Styles.css
@@ -2,8 +2,10 @@
   body {
     font-family: 'Montserrat',sans-serif; 
     }
-  
-
+  .root {
+    --primary-color: red;
+    }
+/**container**/
 .container {
   
   padding-left: 1rem;
@@ -11,7 +13,17 @@
   
 }
 
-  
+.container-center {
+  max-width: 600px;
+  margin: auto;
+}
 
-
+/**links**/
+.link {
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+}
+.primary-link {
+  background-color: var(--primary-color);
+}
   
