--- a/Styles.css
+++ b/Styles.css
@@ -1,11 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
-  body {
+
+body {
     font-family: 'Montserrat',sans-serif; 
     }
-  .root {
+
+.root {
     --primary-color: red;
     }
+
+hr { 
+  margin: 2rem 0rem;
+  }
+
 /**container**/
+
 .container {
   
   padding-left: 1rem;
@@ -24,6 +32,28 @@
   padding: 0.5rem 1rem;
 }
 .primary-link {
+
   background-color: var(--primary-color);
+
+  border-radius: 0.5rem;
+
+  color: white;
+
 }
+
+.secondary-link {
+
+  color: var(--primary-color);
+
+  border-radius: 0.5rem;
+
+  border: 1px var(--primary-color);
+
+}
+
+/** lists **/
+
+
+
+
   
