--- a/Styles.css
+++ b/Styles.css
@@ -5,7 +5,8 @@ body {
     }
 
 .root {
-    --primary-color: red;
+    --primary-color: #7c3aed;
+    --dark-grey: #64748b;
     }
 
 hr { 
@@ -89,4 +90,24 @@ hr {
     font-weight: bold;
 }
 
+/** header**/
+
+.hero {
+    padding: 2rem;
+}
+
+.hero .hero-img {
+    max-width: 350px;
+    display: block;
+    border: auto;
+}
+
+.hero .hero-heading {
+    color: var(--dark-grey);
+    padding-top: 1rem;
+}
+
+.hero .hero-heading .heading-inverted {
+    color: var(--primary-color);
+}
 
