--- a/Styles.css
+++ b/Styles.css
@@ -104,6 +104,7 @@ hr {
 }
 
 .hero .hero-heading {
+    text-allign: center;
     color: var(--dark-grey);
     padding-top: 1rem;
 }
@@ -133,8 +134,13 @@ hr {
     padding: 2rem 1rem;
     text-allign: center;
     color: white;
+    border-top-right-radius: 1rem;
 }
 
 .footer .link {
     color: white;
+}
+
+.footer ul {
+    padding-inline-start: 0px;
 }
